WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268898
[WebGPU] ShaderModule::createLibrary may produce invalid metal with custom layouts
https://bugs.webkit.org/show_bug.cgi?id=268898
Summary
[WebGPU] ShaderModule::createLibrary may produce invalid metal with custom la...
Mike Wyrzykowski
Reported
2024-02-06 23:29:16 PST
[WebGPU] ShaderModule::createLibrary may produce invalid metal with custom layouts
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-02-06 23:29:32 PST
radar://122256850
Mike Wyrzykowski
Comment 2
2024-02-06 23:34:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23987
Tadeu Zagallo
Comment 3
2024-02-07 13:43:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24031
EWS
Comment 4
2024-02-09 08:34:37 PST
Committed
274365@main
(920eba11793e): <
https://commits.webkit.org/274365@main
> Reviewed commits have been landed. Closing PR #24031 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug